WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
285904
Fix more UncountedCallArgsChecker warnings in WebCore
https://bugs.webkit.org/show_bug.cgi?id=285904
Summary
Fix more UncountedCallArgsChecker warnings in WebCore
Rob Buis
Reported
2025-01-14 03:39:26 PST
Fix more UncountedCallArgsChecker warnings in WebCore.
Attachments
Add attachment
proposed patch, testcase, etc.
Rob Buis
Comment 1
2025-01-14 03:42:52 PST
Pull request:
https://github.com/WebKit/WebKit/pull/38988
Radar WebKit Bug Importer
Comment 2
2025-01-21 03:40:11 PST
<
rdar://problem/143309264
>
EWS
Comment 3
2025-03-06 02:57:56 PST
Committed
291690@main
(3cda7e97df64): <
https://commits.webkit.org/291690@main
> Reviewed commits have been landed. Closing PR #38988 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug