Fix more UncountedCallArgsChecker warnings in WebCore https://bugs.webkit.org/show_bug.cgi?id=285904

Reviewed by Ryosuke Niwa.

Fix more [alpha.webkit.UncountedCallArgsChecker] warnings in WebCore.

* Source/WebCore/Modules/mediastream/RTCCertificate.h:
(WebCore::RTCCertificate::protectedOrigin const):
* Source/WebCore/Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::certificatesFromConfiguration):
* Source/WebCore/dom/DocumentInlines.h:
(WebCore::Document::isSameOriginAsTopDocument const):
* Source/WebCore/html/HTMLSelectElement.cpp:
(WebCore::HTMLSelectElement::showPicker):
* Source/WebCore/loader/FrameLoader.cpp:
(WebCore::shouldClearWindowName):
(WebCore::FrameLoader::loadInSameDocument):
(WebCore::FrameLoader::loadPostRequest):
(WebCore::FrameLoader::shouldTreatURLAsSameAsCurrent const):
* Source/WebCore/loader/ImageLoader.cpp:
(WebCore::canReuseFromListOfAvailableImages):
* Source/WebCore/page/LocalDOMWindow.cpp:
(WebCore::LocalDOMWindow::createWindow):
* Source/WebCore/page/Navigation.cpp:
(WebCore::Navigation::initializeForNewWindow):
(WebCore::Navigation::updateForActivation):
* Source/WebCore/page/ios/FrameIOS.mm:
(WebCore::ancestorRespondingToClickEventsNodeQualifier):

Canonical link: https://commits.webkit.org/291690@main